
Designer 2.11.3 (2012-03-25 Formosa)
====================================

Bug fix release.

 - Export commands that are not referenced from buttons or sensors
 

Designer 2.11.2 (2012-03-13 Formosa)
====================================

Bug fix release.

 - New accounts may save (empty) controller and panel document instances
   despite there not being serialized Designer state. The lack of serialization
   data should not be flagged as an error in Designer.

 - Certain image sources still include partial file paths. Unclear if this is
   caused by pre-existing serialization data generated by previous Designer
   versions or if there's stil incorrect API use to include paths in image
   source names in current revision. Temporary stop-gap fix included to strip
   the erroneous paths.
 

Designer 2.11.1 (2012-03-12 Formosa)
====================================

Bug fix release.

 - Make inclusion of Designer serialization data optional in save (user
   may not have made any changes yet when auto-save runs for the first
   time)


Designer 2.11 (2012-02-25 Formosa)
==================================

- Rewrite of server-side save/restore with basic recovery (Juha Lindfors)
- KNX Import Fix : support text/plain content type and display an error 
  when content type is not supported (Marcus Redeker)
- Russound Import Wizard (Marcus Redeker)
- Fix for deleting commands in macros - MODELER-258 (Eric Bariaux)
- Javascript performance improvements on adding sensors, sliders,
  switches (Eric Bariaux)
- Rule configuration (Marcus Redeker)
- Command names are automatically included as properties in generated
  controller.xml files for rule/script use (Marcus Redeker)
- Defined sensors are included in generated controller.xml regardless
  of whether they've been bound to UI widgets to enable rule/script
  use
- KNX Import Fix: accept mime types used by Microsoft Internet
  Explorer (Marcus Redeker)
- Universal Devices ISY-99 REST API protocol (Andrew Ball)